# Tiny-DNS

./: .gitignore  Cargo.toml  README.md
examples/simple_server/: Cargo.toml
examples/simple_server/src/: main.rs
src/: lib.rs  main.rs
src/builder/: mod.rs
src/errors/: mod.rs
src/network/: mod.rs  peer.rs  udp_client.rs  udp_server.rs
src/parsing/: deserialize.rs  mod.rs  serialize.rs
src/protocol/: dns_answer.rs  dns_header.rs  dns_packet.rs  dns_query.rs  dns_question.rs  dns_record.rs  dns_record_type.rs  dns_response.rs  domain_names.rs  mod.rs  packet_buffer.rs
src/resolv/: resolver.rs
src/resolver/: mod.rs
