[package]
name = "tiny_dns"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tiny_dns"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
log = "0.4.21"